--- a/frontend/src/app/components/activity/activity-form.component.html
+++ b/frontend/src/app/components/activity/activity-form.component.html
@@ -67,6 +67,7 @@
           class="border-0 rounded-md"
         />
       </div>
+      @if(tipo === 'evento') {
       <div class="flex justify-between align-middle">
         <span class="flex items-center justify-center">Hora de fin:</span>
         <p-datepicker
@@ -76,6 +77,7 @@
           class="border-0 rounded-md"
         />
       </div>
+      }
       <p-select
         [options]="usuariosResponsables"
         formControlName="usuario_responsable"
@@ -95,8 +97,9 @@
         ></p-colorpicker>
       </div>
       }
-
+@if(tipo === 'evento') {
       <app-ubicacion formControlName="ubicacion"  [ubicacion]="actividadInfo?.ubicacion ?? null"></app-ubicacion>
+      }
       <div class="flex justify-end gap-2 mt-4 shrink-0">
         <button
           type="button"
