Menú desplegable creado

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -2,26 +2,48 @@
   class="grid grid-cols-3 items-center bg-[#9ed2c5] dark:bg-gray-800 dark:text-white px-3"
 >
   <!-- Aparece solo en pantallas grandes -->
-  <app-logo />
+  <button (click)="goToDashboard()" class="w-fit">
+   <app-logo />
+  </button>
 
   <!-- Aparece solo en pantallas pequeñas y medianas -->
-  <div class="flex justify-start md:hidden px-4 pt-2">
+  <!-- <div class="flex justify-start md:hidden px-4 pt-2">
     <button (click)="goBack()" class="text-white text-base" aria-label="Volver">
       <i class="pi pi-arrow-left text-gray-700 dark:text-white text-sm"></i>
     </button>
-  </div>
+  </div> -->
   <!-- Centro -->
   <h1 class="text-xl font-bold text-center">{{ pageTitle }}</h1>
 
   <!-- Derecha -->
   <div class="text-right">
-    <button
+    <!-- <button
       pButton
       (click)="toggleDarkMode()"
       class="bg-[#ff7f50] dark:bg-gray-700 text-white px-4 py-2 rounded"
     >
       @if (isDarkMode()) { 🌙 Modo oscuro } @else { ☀️ Modo claro }
     </button>
-    <p-button severity="danger" label="Cerrar sesión" (click)="logout()" />
+    <p-button severity="danger" label="Cerrar sesión" (click)="logout()" /> -->
+
+    <!-- Botón que activa el popover -->
+    <button
+    pButton
+    type="button"
+    icon="pi pi-cog"
+    (click)="menu.toggle($event)"
+    class="bg-[#ff7f50] dark:bg-gray-700 text-white px-5 py-4 rounded"
+    >
+    </button>
+    <p-overlayPanel #menu>
+      <div class="flex flex-col gap-2 p-2 min-w-[150px]">
+        <!-- Opción 1: Ir a perfil -->
+        <button *ngIf="!isOnRoute('/dashboard/user-profile')" pButton label="Mi perfil" (click)="goToProfile(); menu.hide()" class="w-full"></button>
+        <!-- Opción 2: Ir a ajustes -->
+        <button *ngIf="!isOnRoute('/dashboard/settings')" pButton label="Configuración" (click)="goToSettings(); menu.hide()" class="w-full"></button>
+        <!-- Opción 3: Cerrar sesión -->
+        <button pButton label="Cerrar sesión" severity="danger" (click)="logout()" class="w-full"></button>
+      </div>
+    </p-overlayPanel>
   </div>
 </div>
