--- a/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
+++ b/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
@@ -95,7 +95,7 @@
   <div class="grid grid-cols-2 gap-4 md:grid-cols-4">
     @for (link of links; track $index) {
     <a
-      class="bg-primary hover:bg-primary-100 rounded-xl p-4 flex flex-col justify-between items-start shadow transition dark:bg-gray-800 dark:hover:bg-gray-700 h-24 md:h-40 w-full"
+      class="bg-primary hover:bg-[#ff7f50] hover:text-white rounded-xl p-4 flex flex-col justify-between items-start shadow transition dark:bg-gray-800 dark:hover:bg-gray-700 h-24 md:h-40 w-full"
       [routerLink]="link.url"
     >
       <span class="flex-shrink-0">
