Actualización Landing y modo oscuro dashboard

--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div
-  class="grid grid-cols-3 items-center bg-white dark:bg-gray-800 dark:text-white px-9"
+  class="grid grid-cols-3 items-center bg-white dark:bg-gray-800 dark:text-white px-9 shadow mb-5 px-7"
 >
   <!-- Aparece solo en pantallas grandes -->
   <button (click)="goToDashboard()" class="w-fit">
