--- a/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
+++ b/frontend/src/app/features/dashboard/pages/dashboard-home/dashboard-home.component.html
@@ -4,7 +4,7 @@
     <h1 class="text-4xl font-bold pb-4 pt-3">
       ¡Hola
       <span
-        class="underline decoration-yellow-400 decoration-4 underline-offset-4 text-black"
+        class="underline decoration-yellow-400 decoration-4 underline-offset-4 text-black dark:text-white"
         >{{ userName }}</span
       >
       !
@@ -38,13 +38,13 @@
         <ul class="w-full space-y-2">
           @for (task of children[activeChild].routine; track $index) {
           <li
-            class="flex items-center px-3 py-2 rounded-lg shadow-sm transition-all duration-300 group bg-white"
+            class="flex items-center px-3 py-2 rounded-lg shadow-sm transition-all duration-300 group bg-white dark:bg-gray-700"
             [class.opacity-60]="task.completed"
             [@fadeIn]
           >
             <!-- Emoji -->
             <span
-              class="w-12 h-12 mr-3 rounded-full flex items-center justify-center bg-white border-4"
+              class="w-12 h-12 mr-3 rounded-full flex items-center justify-center bg-white border-4 dark:bg-gray-400"
               [ngClass]="getTaskColorClass(task.type)"
             >
               @if (task.icon.startsWith('pi')) {
@@ -56,7 +56,7 @@
 
             <!-- Nombre de la tarea -->
             <span
-              class="flex-1 text-gray-900"
+              class="flex-1 text-gray-900 dark:text-white"
               [class.line-through]="task.completed"
             >
               {{ task.label }}
