--- a/frontend/src/app/features/landing-page/pages/landing-page/landing-page.component.html
+++ b/frontend/src/app/features/landing-page/pages/landing-page/landing-page.component.html
@@ -16,11 +16,6 @@
       </svg>
     </button>
 
-    <!-- <div class="flex items-center">
-      <img src="/nido.ico" alt="Logo Nido" class="w-8 h-8 mr-2" />
-      <span class="font-regular text-2xl text-gray-900">nido</span>
-    </div> -->
-
     <p-button
       label="Iniciar sesión"
       [raised]="true"
@@ -44,7 +39,11 @@
       familia.
     </p>
     <div>
-      <img class="w-80 mx-auto" src="/landing-image-01.png" alt="image" />
+      <img
+        class="w-80 mx-auto dark:invert dark:brightness-0"
+        src="/landing-image-01.png"
+        alt="image"
+      />
     </div>
   </section>
 
